@startuml Adapter_XML_JSON
interface JsonService {
  +sendJson(data)
}
class XmlProvider {
  +getXml(): string
}
class XmlToJsonAdapter {
  -xmlProvider: XmlProvider
  +sendJson(data): void
  +convertXmlToJson(xml: string): any
}
JsonService <|.. XmlToJsonAdapter
XmlToJsonAdapter ..> XmlProvider : uses
@enduml
